docs/content/docs/v5/foundations/serialization.mdx
---
title: Serialization
description: Understand how workflow data is serialized and persisted across suspensions and resumptions.
type: conceptual
summary: Learn which types can be passed between workflow and step functions.
languageSwitcher:
  - ts
  - py
prerequisites:
  - /docs/foundations/workflows-and-steps
related:
  - /docs/errors/serialization-failed
---

All function arguments and return values passed between workflow and step functions must be serializable. Workflow SDK uses a shared serialization format built on top of [devalue](https://github.com/sveltejs/devalue). It supports standard JSON values and additional language-native types.

<Callout type="info">
The serialization system ensures that all data persists correctly across workflow suspensions and resumptions, enabling durable execution.
</Callout>

## Supported serializable types

The following types can be serialized and passed through workflow functions:

<LanguageContent value="ts">

**Standard JSON types:**

- `string`
- `number`
- `boolean`
- `null`
- Arrays of serializable values
- Objects with string keys and serializable values

**Extended types:**

- `undefined`
- `bigint`
- `ArrayBuffer`
- `BigInt64Array`, `BigUint64Array`
- `Date`
- `Float32Array`, `Float64Array`
- `Int8Array`, `Int16Array`, `Int32Array`
- `Map<Serializable, Serializable>`
- `RegExp`
- `Set<Serializable>`
- `URL`
- `URLSearchParams`
- `Uint8Array`, `Uint8ClampedArray`, `Uint16Array`, `Uint32Array`

**Notable:**

<Callout type="info">
These types have special handling and are explained in detail in the sections below.
</Callout>

- `Headers`
- `Request`
- `Response`
- `ReadableStream<Serializable>`
- `WritableStream<Serializable>`
- `AbortController`
- `AbortSignal`

</LanguageContent>
<LanguageContent value="py">

**Primitive and collection types:**

- `str`
- `int` and `float`, including integers outside JavaScript's safe range
- `bool`
- `None`
- `list` and `tuple`
- `dict` with string keys
- `set` and `frozenset`
- Repeated and cyclic references

**Extended types:**

- `bytes`, `bytearray`, and `memoryview`
- `datetime.datetime`, `datetime.date`, `datetime.time`, and `datetime.timedelta`
- `decimal.Decimal`
- `pathlib.Path`
- `re.Pattern`
- `uuid.UUID`
- Pydantic models and dataclasses used in workflow or step type annotations
- Classes registered with `@serializable` or `register_serializable()`
- `WorkflowWritable` stream handles

<Callout type="info">
Python values use the same wire format as the TypeScript SDK. For example, `bytes` is read as `Uint8Array` in TypeScript, and `datetime.datetime` is read as `Date`.
</Callout>

</LanguageContent>

## Pass-by-value semantics

**Parameters are passed by value, not by reference.** Steps receive deserialized copies of data. Mutations inside a step won't affect the original in the workflow.

**Incorrect:**

<LanguageContent value="ts">

```typescript title="workflows/incorrect-mutation.ts" lineNumbers
export async function updateUserWorkflow(userId: string) {
  "use workflow";

  let user = { id: userId, name: "John", email: "john@example.com" };
  await updateUserStep(user);

  // user.email is still "john@example.com" // [!code highlight]
  console.log(user.email); // [!code highlight]
}

async function updateUserStep(user: { id: string; name: string; email: string }) {
  "use step";
  user.email = "newemail@example.com"; // Changes are lost // [!code highlight]
}
```

</LanguageContent>
<LanguageContent value="py">

```python title="app/workflows/incorrect_mutation.py" lineNumbers
from app.workflow import wf

@wf.step
async def update_user_step(user: dict[str, str]):
    user["email"] = "newemail@example.com"  # Changes are lost  # [!code highlight]

@wf.workflow
async def update_user_workflow(user_id: str):
    user = {"id": user_id, "name": "John", "email": "john@example.com"}
    await update_user_step(user)

    # user["email"] is still "john@example.com"
    print(user["email"])  # [!code highlight]
```

</LanguageContent>

**Correct, return the modified data:**

<LanguageContent value="ts">

```typescript title="workflows/correct-mutation.ts" lineNumbers
export async function updateUserWorkflow(userId: string) {
  "use workflow";

  let user = { id: userId, name: "John", email: "john@example.com" };
  user = await updateUserStep(user); // Reassign the return value // [!code highlight]

  console.log(user.email); // "newemail@example.com"
}

async function updateUserStep(user: { id: string; name: string; email: string }) {
  "use step";
  user.email = "newemail@example.com";
  return user; // [!code highlight]
}
```

</LanguageContent>
<LanguageContent value="py">

```python title="app/workflows/correct_mutation.py" lineNumbers
from app.workflow import wf

@wf.step
async def update_user_step(user: dict[str, str]):
    user["email"] = "newemail@example.com"
    return user  # [!code highlight]

@wf.workflow
async def update_user_workflow(user_id: str):
    user = {"id": user_id, "name": "John", "email": "john@example.com"}
    user = await update_user_step(user)  # Reassign the return value  # [!code highlight]

    print(user["email"])  # "newemail@example.com"
```

</LanguageContent>

**Custom classes:**

- <LanguageContent value="ts" as="span">Class instances that implement [`WORKFLOW_SERIALIZE` and `WORKFLOW_DESERIALIZE`](#custom-class-serialization)</LanguageContent><LanguageContent value="py" as="span">Pydantic models, dataclasses, and classes registered with [`@serializable`](#custom-class-serialization)</LanguageContent>

## Streaming

<LanguageContent value="ts">

`ReadableStream` and `WritableStream` are supported as serializable types with special handling. These streams can be passed between workflow and step functions while maintaining their streaming capabilities.

</LanguageContent>
<LanguageContent value="py">

`WorkflowWritable` stream handles are serializable. A workflow can create a handle with `get_writable()`, pass it to a step or child workflow, and keep writing to the same durable stream.

</LanguageContent>

For complete information about using streams in workflows, including patterns for AI streaming, file processing, and progress updates, see the [Streaming Guide](/docs/foundations/streaming).

## Request & response

<LanguageContent value="ts">

The Web API [`Request`](https://developer.mozilla.org/en-US/docs/Web/API/Request) and [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response) APIs are supported by the serialization system,
and can be passed around between workflow and step functions similarly to other data types.

As a convenience, these two APIs are treated slightly differently when used
within a workflow function: calling the `text()` / `json()` / `arrayBuffer()` instance
methods is automatically treated as a step function invocation. This allows you to consume
the body directly in the workflow context while maintaining proper serialization and caching.

For example, consider how receiving a webhook request provides the entire `Request`
instance into the workflow context. You may consume the body of that request directly
in the workflow, which will be cached as a step result for future resumptions of the workflow:

```typescript title="workflows/webhook.ts" lineNumbers
import { createWebhook } from "workflow";

export async function handleWebhookWorkflow() {
  "use workflow";

  const webhook = createWebhook();
  const request = await webhook;

  // The body of the request will only be consumed once // [!code highlight]
  const body = await request.json(); // [!code highlight]

  // …
}
```

### Using `fetch` in workflows

Because `Request` and `Response` are serializable, Workflow SDK provides a `fetch` function that can be used directly in workflow functions:

```typescript title="workflows/api-call.ts" lineNumbers
import { fetch } from "workflow"; // [!code highlight]

export async function apiWorkflow() {
  "use workflow";

  // fetch can be called directly in workflows // [!code highlight]
  const response = await fetch("https://api.example.com/data"); // [!code highlight]
  const data = await response.json();

  return data;
}
```

The `fetch` implementation from `workflow` is a step function that wraps the standard `fetch`:

```typescript title="Implementation" lineNumbers
export async function fetch(...args: Parameters<typeof globalThis.fetch>) {
  "use step";
  return globalThis.fetch(...args);
}
```

This allows you to make HTTP requests directly in workflow functions while maintaining deterministic replay behavior through automatic caching.

</LanguageContent>
<LanguageContent value="py">

Python web-framework request and response objects are not workflow-serializable. Extract serializable values in your route before calling `start()`, and perform outbound HTTP requests in a step:

```python title="app/workflows/api_call.py" lineNumbers
import httpx

from app.workflow import wf

@wf.step
async def fetch_data(url: str):
    async with httpx.AsyncClient() as client:
        response = await client.get(url)
        response.raise_for_status()
        return response.json()

@wf.workflow
async def api_workflow(url: str):
    return await fetch_data(url)
```

</LanguageContent>

## AbortController & AbortSignal

<LanguageContent value="ts">

`AbortController` and `AbortSignal` are serializable types that enable cooperative cancellation across workflow and step boundaries. Inside a workflow function, `new AbortController()` creates a durable controller that works across suspensions and step boundaries:

```typescript lineNumbers
import { sleep } from "workflow";

export async function cancellableWorkflow() {
  "use workflow";

  const controller = new AbortController(); // [!code highlight]

  const result = await Promise.race([
    fetchData(controller.signal), // [!code highlight]
    sleep("10s").then(() => null),
  ]);

  if (result === null) {
    controller.abort(); // [!code highlight]
  }

  return result;
}

async function fetchData(signal: AbortSignal) {
  "use step";
  const response = await fetch("https://api.example.com/data", { signal });
  return response.json();
}
```

For usage patterns including timeouts, parallel cancellation, user-triggered cancellation, and run cancellation, see the [Cancellation Guide](/docs/foundations/cancellation). For details on the hook and stream backing that makes this work, see [How Cancellation Works](/docs/how-it-works/cancellation).

</LanguageContent>
<LanguageContent value="py">

Python does not serialize `AbortController` or `AbortSignal`. Instead, opt a step into durable cancellation with `@wf.step(cancellable=True)`, run it as an `asyncio.Task`, and call `task.cancel()`. See the [Cancellation Guide](/docs/foundations/cancellation) for examples.

</LanguageContent>

## Custom class serialization

Custom class instances need a serialization strategy that tells the SDK how to reconstruct them.

### Basic example

<LanguageContent value="ts">

You can make your classes serializable by implementing two static methods using special symbols from the `@workflow/serde` package.

{/* @expect-error:2351 */}

```typescript title="workflows/custom-class.ts" lineNumbers
import { WORKFLOW_SERIALIZE, WORKFLOW_DESERIALIZE } from "@workflow/serde"; // [!code highlight]

class Point {
  constructor(
    public x: number,
    public y: number
  ) {}

  // Define how to serialize an instance to plain data
  static [WORKFLOW_SERIALIZE](instance: Point) { // [!code highlight]
    return { x: instance.x, y: instance.y }; // [!code highlight]
  } // [!code highlight]

  // Define how to reconstruct an instance from plain data
  static [WORKFLOW_DESERIALIZE](data: { x: number; y: number }) { // [!code highlight]
    return new Point(data.x, data.y); // [!code highlight]
  } // [!code highlight]
}
```

Once you've implemented these methods, instances of your class can be passed between workflow and step functions:

{/* @expect-error:2351 */}

```typescript title="workflows/geometry.ts" lineNumbers
import { Point } from "./custom-class";

export async function geometryWorkflow() {
  "use workflow";

  const point = new Point(10, 20);
  // Point is serialized automatically
  const doubled = await doublePoint(point); // [!code highlight]

  console.log(doubled.x, doubled.y); // 20, 40
  return doubled;
}

async function doublePoint(point: Point) {
  "use step";
  // Returns a new Point instance
  return new Point(point.x * 2, point.y * 2); // [!code highlight]
}
```

</LanguageContent>
<LanguageContent value="py">

Use the `@serializable` decorator and implement `_workflow_serialize()` and `_workflow_deserialize()`:

```python title="app/workflows/custom_class.py" lineNumbers
from vercel.workflow import serializable

@serializable  # [!code highlight]
class Point:
    def __init__(self, x: int, y: int):
        self.x = x
        self.y = y

    def _workflow_serialize(self):  # [!code highlight]
        return {"x": self.x, "y": self.y}

    @classmethod
    def _workflow_deserialize(cls, data):  # [!code highlight]
        return cls(data["x"], data["y"])
```

Once registered, instances can cross workflow and step boundaries:

```python title="app/workflows/geometry.py" lineNumbers
from app.workflow import wf
from app.workflows.custom_class import Point

@wf.step
async def double_point(point: Point) -> Point:
    return Point(point.x * 2, point.y * 2)

@wf.workflow
async def geometry_workflow() -> Point:
    point = Point(10, 20)
    doubled = await double_point(point)  # [!code highlight]
    print(doubled.x, doubled.y)  # 20, 40
    return doubled
```

Pydantic models and dataclasses do not use `@serializable`. Add their types to workflow and step annotations instead; the SDK serializes and validates them through Pydantic.

</LanguageContent>

### How it works

<LanguageContent value="ts">

1. **`WORKFLOW_SERIALIZE`**: A static method that receives a class instance and returns serializable data (primitives, plain objects, arrays, etc.)

2. **`WORKFLOW_DESERIALIZE`**: A static method that receives the serialized data and returns a new class instance

3. **Automatic Registration**: The SWC compiler plugin automatically detects classes that implement these symbols and registers them for serialization. Each class receives a deterministic `classId` derived from its file path and class name, and is registered into the global `Symbol.for("workflow-class-registry")` registry at build time. No manual registration step is required

</LanguageContent>
<LanguageContent value="py">

1. **`_workflow_serialize()`** converts an instance to values the SDK already supports.
2. **`_workflow_deserialize()`** is a class method that reconstructs the instance.
3. **`@serializable`** registers the class with a deterministic ID based on its module and qualified name. Use `register_serializable()` when you cannot decorate the class, or pass `class_id` when Python and TypeScript must share the same class identity.

</LanguageContent>

### Requirements

<LanguageContent value="ts">

<Callout type="warn">
`WORKFLOW_SERIALIZE` and `WORKFLOW_DESERIALIZE` must be implemented as **static** methods on the class. Defining them as instance methods is not supported.
</Callout>

- The data returned by `WORKFLOW_SERIALIZE` must itself be serializable (see [Supported Serializable Types](#supported-serializable-types))
- Both symbols must be implemented together - a class with only one will not be serializable

<Callout type="warn">
The `WORKFLOW_SERIALIZE` and `WORKFLOW_DESERIALIZE` methods run inside the workflow context and are subject to the same constraints as `"use workflow"` functions. This means:
- No Node.js-specific APIs (like `fs`, `path`, `crypto`, etc.)
- No non-deterministic operations (like `Math.random()` or `Date.now()`)
- No external network calls

Keep these methods focused on data transformation only.
</Callout>

</LanguageContent>
<LanguageContent value="py">

- `_workflow_serialize()` must return supported serializable data.
- `_workflow_deserialize()` must be a class method that reconstructs the same logical value.
- Both methods must be implemented together unless you pass explicit `serialize` and `deserialize` callables to `register_serializable()`.

<Callout type="warn">
Keep serializers focused on pure data transformation. They can run in the replaying workflow sandbox, so they must not perform network calls, access host-only APIs, or use nondeterministic values.
</Callout>

</LanguageContent>

### Instance methods as steps

<LanguageContent value="ts">

In practice, many classes have methods that need Node.js APIs, perform network calls, or interact with databases, operations that are not allowed in the `"use workflow"` execution context. You can make these methods workflow-compatible by adding `"use step"` to them. The SWC compiler will strip the method bodies from the workflow bundle and replace them with proxy functions that invoke the method as a step, with full Node.js runtime access. The `this` context (the class instance) is automatically serialized and deserialized across the workflow/step boundary.

This requires the class to implement `WORKFLOW_SERIALIZE` and `WORKFLOW_DESERIALIZE`, so that the instance can be passed to the step execution context.

{/* @expect-error:2351 */}

```typescript title="workflows/order.ts" lineNumbers
import { WORKFLOW_SERIALIZE, WORKFLOW_DESERIALIZE } from "@workflow/serde"; // [!code highlight]
import { db } from "../lib/db";

class Order {
  constructor(
    public id: string,
    public items: Map<string, number>,
    public createdAt: Date
  ) {}

  // Custom serialization: data must be serializable types
  static [WORKFLOW_SERIALIZE](instance: Order) { // [!code highlight]
    return { // [!code highlight]
      id: instance.id, // [!code highlight]
      items: instance.items, // Map is serializable // [!code highlight]
      createdAt: instance.createdAt, // Date is serializable // [!code highlight]
    }; // [!code highlight]
  } // [!code highlight]

  static [WORKFLOW_DESERIALIZE](data: { // [!code highlight]
    id: string; // [!code highlight]
    items: Map<string, number>; // [!code highlight]
    createdAt: Date; // [!code highlight]
  }) { // [!code highlight]
    return new Order(data.id, data.items, data.createdAt); // [!code highlight]
  } // [!code highlight]

  // Methods without "use step" run in the workflow context
  // and must follow the same constraints as workflow functions
  total(): number {
    let sum = 0;
    for (const quantity of this.items.values()) {
      sum += quantity;
    }
    return sum;
  }

  // Instance methods with "use step" run as step functions
  // with full Node.js access; `this` is automatically serialized
  async save(): Promise<void> {
    "use step"; // [!code highlight]
    await db.orders.insert({ // [!code highlight]
      id: this.id, // [!code highlight]
      items: Object.fromEntries(this.items), // [!code highlight]
      createdAt: this.createdAt, // [!code highlight]
    }); // [!code highlight]
  }

  async sendConfirmation(email: string): Promise<string> {
    "use step"; // [!code highlight]
    const res = await fetch("https://api.example.com/email", { // [!code highlight]
      method: "POST", // [!code highlight]
      body: JSON.stringify({ // [!code highlight]
        to: email, // [!code highlight]
        orderId: this.id, // [!code highlight]
        itemCount: this.items.size, // [!code highlight]
      }), // [!code highlight]
    }); // [!code highlight]
    const { messageId } = await res.json();
    return messageId;
  }
}
```

The class can then be used naturally inside a workflow function. Instance methods marked with `"use step"` are each executed as a step, with automatic caching, retry semantics, and full Node.js runtime access. Methods _without_ `"use step"` run directly in the workflow context, so they must follow the same constraints as workflow functions:

{/* @expect-error:2693 */}

```typescript title="workflows/process-order.ts" lineNumbers
export async function processOrderWorkflow(
  orderId: string,
  items: Map<string, number>,
  email: string
) {
  "use workflow";

  const order = new Order(orderId, items, new Date()); // [!code highlight]

  // Runs in the workflow context; no "use step" needed
  const itemCount = order.total(); // [!code highlight]

  // Each "use step" instance method call runs as a separate step
  await order.save(); // [!code highlight]
  const messageId = await order.sendConfirmation(email); // [!code highlight]

  return { orderId, itemCount, messageId };
}
```

[Pass-by-value semantics](#pass-by-value-semantics) also apply to the `this` context of `"use step"` instance methods. Modifying instance properties inside a step method will not affect the original instance in the workflow. If you need to update instance state, return `this` from the step method and re-assign the variable in the workflow:

{/* @expect-error:2351 */}

```typescript title="workflows/order.ts" lineNumbers
export class Order {
  // ...

  async addItem(name: string, quantity: number): Promise<Order> {
    "use step";
    this.items.set(name, quantity);
    return this; // [!code highlight]
  }
}
```

{/* @expect-error:2693,2552,2304 */}

```typescript title="workflows/process-order.ts" lineNumbers
export async function processOrderWorkflow() {
  "use workflow";

  let order = new Order(orderId, items, new Date());

  // Re-assign to capture the updated instance
  order = await order.addItem("Widget", 3); // [!code highlight]
}
```

</LanguageContent>
<LanguageContent value="py">

Python registers steps as decorated functions rather than transforming instance methods. Put host-runtime work in a module-level step and pass the serializable instance explicitly. Pass-by-value semantics still apply, so return and reassign the instance when the step changes it:

```python title="app/workflows/order.py" lineNumbers
from dataclasses import dataclass

from app.workflow import wf

@dataclass
class Order:
    items: dict[str, int]

@wf.step
async def add_item(order: Order, name: str, quantity: int) -> Order:
    order.items[name] = quantity
    return order  # [!code highlight]

@wf.workflow
async def process_order_workflow(order: Order):
    order = await add_item(order, "Widget", 3)  # [!code highlight]
    return order
```

</LanguageContent>
